--- a/template/partials/header.hbs
+++ b/template/partials/header.hbs
@@ -1,12 +1,13 @@
 <nav>
-        <ul class="header">
-            <div>
-                <a href="/"><img src="resources/logo.svg" class="login-btn" style="width: 13 vw;" alt=""></a>
-            </div>
-
-            {{!-- <li><a href="/home"></a>Home</li> --}}
-            {{!-- <li><a href="/"></a>SignUp</li> --}}
-            <li class="login-btn"><a href="/login" >Login</a></li>
-
-        </ul>
-    </nav>
+    <ul class="header">
+        <div>
+            <a href="/"><img src="resources/logo.svg" class="login-btn" style="width: 13 vw;" alt=""></a>
+        </div>
+        <div class="right-header">
+            <li class="login-btn"><a href="/">Home</a></li>
+            <li class="login-btn" id="hide"><a href="/secret">Profile</a></li>
+            <li class="login-btn"><a href="/login">Login</a></li>
+            <li class="login-btn" id="hide"><a href="/logout">Logout</a></li>
+        </div>
+    </ul>
+</nav>
